--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
       <br>
       <div id="middle">
-          <img src="./img/C.png" alt="icono de espana" width="50px" height="50px" class="float-left">
+          <img src="./img/c.png" alt="icono de espana" width="50px" height="50px" class="float-left">
           <div class="progress1">
             <div id="c"class="progress-value1" style="width: 50%"><span></span></div>
           </div>
@@ -216,7 +216,7 @@
      <a href="https://github.com/JonnyC12" target="blank" class="mr-4"><img src="./img/github.png" alt="icono de espana" width="50px" height="50px" class="mr-4">JonnyC12</a>
      <a href="mailto:jonathan.coque12@gmail.com" class="mr-4"><img src="./img/gmail.png" alt="icono de espana" width="50px" height="50px" class="mr-4">jonathan.coque12@gmail.com</a>
      <a href="tel:=34643300246" class="mr-4"><img src="./img/telefono.png" alt="icono de espana" width="50px" height="50px" class="mr-4">+34643300246</a>
-     <a href="./cv/curriculum-jonathan.pdf" target="blank" class="mr-4"><img src="./img/curriculum-vitae.png" alt="icono de espana" width="50px" height="50px" class="mr-4">CV</a>
+     <a href="cv/cvJonathan.pdf" target="blank" class="mr-4"><img src="./img/curriculum-vitae.png" alt="icono de espana" width="50px" height="50px" class="mr-4">CV</a>
    </div>
  </div>
 </section>
