--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="col-md-6 col-sm-6">
         <div class="header-content-right text-center">
-          <p class="">Grado en Ingeniería Informática con mencion en computación</p>
+          <p class="">Grado en Ingeniería Informática con mención en computación</p>
           <p>2017-Actualmente</p>
         </div>
       </div>
